<resources>
    <string name="app_name">BojackHorsemanCharactersApp</string>
    <string name="title_activity_welcome_screen">WelcomeScreenActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bojack">Bojack.</string>
    <string name="horseman">Horseman.</string>
    <string name="obviously">Obviously..</string>
    <string name="give_me_details">Give me details!</string>
    <string name="app_version">App version: 1.0.0</string>
    <string name="rights">All right reserved©</string>
    <string name="list_title">Characters</string>
</resources>